--- a/layout/_contact.scss
+++ b/layout/_contact.scss
@@ -1,6 +1,5 @@
 .contact {
-  min-height: 70vh;
-  position: relative;
+  min-height: 80vh;
   background: linear-gradient(#748d9f, #5f809e);
 
   &__img-container {
