--- a/layout/_grid.scss
+++ b/layout/_grid.scss
@@ -1,5 +1,5 @@
 .grid-container {
-  padding: 125px 12% 75px 10%;
+  padding: 125px 12% 100px 10%;
 }
 
 [class^="row"] {
