--- a/main.scss
+++ b/main.scss
@@ -10,7 +10,6 @@
   font-family: $font-body;
   color: $color-primary;
   scroll-behavior: smooth;
-  outline: 1px solid red;
 }
 
 @import "base/_typography";
